[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context"
version = "0.1.0"
description = "My context library"
requires-python = ">=3.7"

# This ensures the .md files are included when you pip install
[tool.setuptools.package-data]
"context" = ["*.md"]

[tool.setuptools]
packages = ["context"]
